# MercleCosmwasmContracts

./: .gitignore  deploy.sh  node.sh  package-lock.json  package.json
cmd/: build.sh  node.sh
contracts/: Cargo.toml
contracts/MembershipNFT/: Cargo.toml
contracts/MembershipNFT/artifacts/: checksums.txt  mercle_nft_membership.wasm
contracts/MembershipNFT/src/: error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/MintWithClaim/: Cargo.toml
contracts/MintWithClaim/artifacts/: checksums.txt  mercle_mint_with_claim.wasm
contracts/MintWithClaim/src/: error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/artifacts/: checksums.txt  contract.wasm  mercle_wasm_contracts.wasm
contracts/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  receiver.rs  state.rs
nft/src/: helpers.rs  query.rs  state.rs
scripts/: deploy.ts  enableMultipleMints.ts  genKeys.ts  index.ts
tests/: MembershipNFT.test.ts  MintWithClaim.test.ts  index.spec.ts
