[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3          # Use slightly better optimizations.
overflow-checks = true # Disable integer overflow checks.

[features]
library = []

[dependencies]
cosmwasm-schema = "=1.5.5"
cosmwasm-std = { version = "=1.5.5", features = ["stargate"] }
cw-storage-plus = "1.2.0"

[dev-dependencies]
