[package]
name = "contract"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = "=1.5.5"
cosmwasm-std = { version = "=1.5.5", features = ["stargate"] }
cw-storage-plus = "1.2.0"

[dev-dependencies]
