[package]
name = "mercle_nft_membership"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "=1.5.5"
cosmwasm-std = { version = "=1.5.5", features = ["stargate"] }
cw2 = "1.1.2"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
hex = "0.4"
sha2 = { version = "0.10.8", features = ["oid"] }
thiserror = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = "1.0.87"
schemars = "0.8.10"
cw20 = "1.1.0"
cw721 = "0.18.0"
